# daoyi-cloud-rs

./: .env  .gitignore  AGENTS.md  Cargo.toml  LICENSE  PROJECT_INDEX.md  README.md
crates/bins/daoyi-module-demo/: Cargo.toml  README.md
crates/bins/daoyi-module-demo/src/: main.rs
crates/bins/daoyi-module-demo/src/demo/: mod.rs
crates/libs/commons/daoyi-cloud-common/: Cargo.toml  README.md
crates/libs/commons/daoyi-cloud-common/src/: lib.rs
crates/libs/entities/daoyi-entity-demo/: Cargo.toml  README.md
daoyi_cloud_rs/: .env.example  .gitignore  Cargo.toml  LICENSE  REFACTOR_PLAN.md  重构计划.md
daoyi_cloud_rs/crates/daoyi-framework/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-framework/src/: lib.rs
daoyi_cloud_rs/crates/daoyi-gateway/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-gateway/resources/: application.yaml
daoyi_cloud_rs/crates/daoyi-gateway/src/: lib.rs  main.rs
daoyi_cloud_rs/crates/daoyi-module-ai/daoyi-module-ai-api/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-ai/daoyi-module-ai-api/src/: lib.rs
daoyi_cloud_rs/crates/daoyi-module-ai/daoyi-module-ai-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-ai/daoyi-module-ai-server/src/: main.rs
daoyi_cloud_rs/crates/daoyi-module-bpm/daoyi-module-bpm-api/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-bpm/daoyi-module-bpm-api/src/: lib.rs
daoyi_cloud_rs/crates/daoyi-module-bpm/daoyi-module-bpm-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-bpm/daoyi-module-bpm-server/src/: main.rs
daoyi_cloud_rs/crates/daoyi-module-crm/daoyi-module-crm-api/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-crm/daoyi-module-crm-api/src/: lib.rs
daoyi_cloud_rs/crates/daoyi-module-crm/daoyi-module-crm-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-crm/daoyi-module-crm-server/src/: main.rs
daoyi_cloud_rs/crates/daoyi-module-erp/daoyi-module-erp-api/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-erp/daoyi-module-erp-api/src/: lib.rs
daoyi_cloud_rs/crates/daoyi-module-erp/daoyi-module-erp-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-erp/daoyi-module-erp-server/src/: main.rs
daoyi_cloud_rs/crates/daoyi-module-infra/daoyi-module-infra-api/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-infra/daoyi-module-infra-api/src/: lib.rs
daoyi_cloud_rs/crates/daoyi-module-infra/daoyi-module-infra-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-infra/daoyi-module-infra-server/src/: main.rs
daoyi_cloud_rs/crates/daoyi-module-iot/daoyi-module-iot-api/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-iot/daoyi-module-iot-api/src/: lib.rs
daoyi_cloud_rs/crates/daoyi-module-iot/daoyi-module-iot-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-iot/daoyi-module-iot-server/src/: main.rs
daoyi_cloud_rs/crates/daoyi-module-mall/daoyi-module-product-api/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-mall/daoyi-module-product-api/src/: lib.rs
daoyi_cloud_rs/crates/daoyi-module-mall/daoyi-module-product-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-mall/daoyi-module-promotion-api/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-mall/daoyi-module-promotion-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-mall/daoyi-module-statistics-api/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-mall/daoyi-module-statistics-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-mall/daoyi-module-trade-api/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-mall/daoyi-module-trade-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-member/daoyi-module-member-api/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-member/daoyi-module-member-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-mp/daoyi-module-mp-api/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-mp/daoyi-module-mp-api/src/: lib.rs
daoyi_cloud_rs/crates/daoyi-module-mp/daoyi-module-mp-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-pay/daoyi-module-pay-api/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-pay/daoyi-module-pay-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-report/daoyi-module-report-api/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-report/daoyi-module-report-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-system/daoyi-module-system-api/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-module-system/daoyi-module-system-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-server/: Cargo.toml
daoyi_cloud_rs/crates/daoyi-server/src/: main.rs
daoyi_cloud_rs/daoyi-dependencies/: Cargo.toml
daoyi_cloud_rs/daoyi-dependencies/src/: lib.rs
daoyi_cloud_rs/daoyi-framework/: Cargo.toml
daoyi_cloud_rs/daoyi-framework/src/: config.rs  lib.rs  module.rs  telemetry.rs  web.rs
daoyi_cloud_rs/daoyi-gateway/: Cargo.toml
daoyi_cloud_rs/daoyi-gateway/src/: main.rs
daoyi_cloud_rs/daoyi-module-ai/: Cargo.toml
daoyi_cloud_rs/daoyi-module-ai/src/: lib.rs
daoyi_cloud_rs/daoyi-module-bpm/: Cargo.toml
daoyi_cloud_rs/daoyi-module-bpm/src/: lib.rs
daoyi_cloud_rs/daoyi-module-crm/: Cargo.toml
daoyi_cloud_rs/daoyi-module-crm/src/: lib.rs
daoyi_cloud_rs/daoyi-module-erp/: Cargo.toml
daoyi_cloud_rs/daoyi-module-erp/src/: lib.rs
daoyi_cloud_rs/daoyi-module-infra/: Cargo.toml
daoyi_cloud_rs/daoyi-module-infra/src/: lib.rs  routes.rs
daoyi_cloud_rs/daoyi-module-iot/: Cargo.toml
daoyi_cloud_rs/daoyi-module-iot/src/: lib.rs
daoyi_cloud_rs/daoyi-module-mall/: Cargo.toml
daoyi_cloud_rs/daoyi-module-mall/src/: lib.rs
daoyi_cloud_rs/daoyi-module-member/: Cargo.toml
daoyi_cloud_rs/daoyi-module-member/src/: lib.rs
daoyi_cloud_rs/daoyi-module-mp/: Cargo.toml
daoyi_cloud_rs/daoyi-module-mp/src/: lib.rs
daoyi_cloud_rs/daoyi-module-pay/: Cargo.toml
daoyi_cloud_rs/daoyi-module-pay/src/: lib.rs
daoyi_cloud_rs/daoyi-module-report/: Cargo.toml
daoyi_cloud_rs/daoyi-module-report/src/: lib.rs
daoyi_cloud_rs/daoyi-module-system/: Cargo.toml
daoyi_cloud_rs/daoyi-module-system/src/: lib.rs  routes.rs
daoyi_cloud_rs/daoyi-server/: Cargo.toml
daoyi_cloud_rs/daoyi-server/src/: main.rs
daoyi_cloud_rs/migration/src/: m20220101_000001_create_table.rs
(+78 files in other folders)
