[package]
name = "daoyi-cloud-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license-file.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
anyhow.workspace = true
daoyi-cloud-common.workspace = true
daoyi-module-demo.workspace = true

[workspace]
members = ["crates/libs/commons/*", "crates/libs/entities/*", "crates/bins/*"]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.94.0"
description = """
daoyi-cloud-rs
"""
license-file = "LICENSE"
readme = "README.md"
authors = ["兰陵王 <<gemiman@vip.qq.com>>"]

[workspace.dependencies]
# daoyi-cloud-rs
daoyi-cloud-common = { version = "0.9.0", path = "crates/libs/commons/daoyi-cloud-common" }
daoyi-entity-demo = { version = "0.9.0", path = "crates/libs/entities/daoyi-entity-demo" }
daoyi-module-demo = { version = "0.9.0", path = "crates/bins/daoyi-module-demo" }
# third party
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.51.1", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "chrono"] }
config = { version = "0.15.22", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = { version = "1.0.102" }
sea-orm = { version = "2.0.0-rc.38", features = ["with-chrono", "debug-print", "sqlx-postgres", "with-rust_decimal", "runtime-tokio"] }
#num_cpus = { version = "1.17.0" }
thiserror = { version = "2.0.18" }
tower-http = { version = "0.6.8", features = ["trace", "timeout", "limit", "cors", "normalize-path", "auth"] }
xid = { version = "1.1.1" }
bytesize = { version = "2.3.1" }
validator = { version = "0.20.0", features = ["derive"] }
axum-valid = { version = "0.24.0", features = ["full_validator"] }
regex = { version = "1.12.3" }
idgenerator = { version = "2.0.0" }
bcrypt = { version = "0.19.0" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
wax = { version = "0.7.0" }