[package]
name = "daoyi-cloud-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "daoyi-cloud-rs aggregated server entry point"
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
salvo.workspace = true
tokio.workspace = true
anyhow.workspace = true
daoyi-cloud-common.workspace = true
daoyi-module-demo.workspace = true

[workspace]
members = ["crates/libs/commons/*", "crates/libs/entities/*", "crates/bins/*"]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.94.0"
description = "Rust cloud-native microservice scaffold based on Salvo + SeaORM + MySQL"
license = "MIT"
repository = "https://github.com/gemiman/daoyi-cloud-rs"
readme = "README.md"
authors = ["兰陵王 <gemiman@vip.qq.com>"]
keywords = ["salvo", "sea-orm", "microservice", "mysql", "openapi"]
categories = ["web-programming", "web-programming::http-server"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace.dependencies]
# daoyi-cloud-rs
daoyi-cloud-common = { version = "0.9.0", path = "crates/libs/commons/daoyi-cloud-common" }
daoyi-entity-demo = { version = "0.9.0", path = "crates/libs/entities/daoyi-entity-demo" }
daoyi-module-demo = { version = "0.9.0", path = "crates/bins/daoyi-module-demo" }
# third party
salvo = { version = "0.91.1", features = ["oapi", "cors", "logging", "timeout", "size-limiter", "trailing-slash", "request-id", "anyhow", "affix-state"] }
salvo-oapi = { version = "0.91.1", features = ["swagger-ui", "scalar", "chrono"] }
tokio = { version = "1.51.1", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "chrono"] }
config = { version = "0.15.22", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = { version = "1.0.102" }
sea-orm = { version = "2.0.0-rc.38", features = ["with-chrono", "debug-print", "sqlx-mysql", "with-rust_decimal", "runtime-tokio"] }
thiserror = { version = "2.0.18" }
xid = { version = "1.1.1" }
bytesize = { version = "2.3.1" }
validator = { version = "0.20.0", features = ["derive"] }
regex = { version = "1.12.3" }
idgenerator = { version = "2.0.0" }
bcrypt = { version = "0.19.0" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
wax = { version = "0.7.0" }
serde_json = { version = "1.0.140" }
serde_html_form = { version = "0.2.7" }
