[workspace]
members = [".", "migration"]
[package]
name = "daoyi_cloud_rs"
version = "0.1.1"
edition = "2024"
rust-version = "1.89"
readme = "./README.md"

[dependencies]
anyhow = "1.0.100"
figment = { version = "0.10.19", features = ["env", "toml"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rust-embed = "8.9.0"
salvo = { version = "0.85.0", features = ["anyhow", "cookie", "cors", "jwt-auth", "oapi", "serve-static", "rustls", "logging", "test"] }
serde = "1.0.228"
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
validator = { version = "0.20.0", features = ["derive"] }
ulid = "1.2.1"
argon2 = "0.5.3"
cookie = "0.18.1"
dotenvy = "0.15.7"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["std", "fmt", "env-filter", "tracing-log", "time", "local-time", "json"] }
sea-orm = { version = "2.0.0-rc.19", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
askama = "0.14.0"
rand = "0.10.0-rc.5"
redis = "1.0.0-rc.4"
nacos-sdk = "0.5.3"
