[workspace]
members = [
    "daoyi-dependencies",
    "daoyi-framework",
    "daoyi-gateway",
    "daoyi-server",
    "daoyi-module-system",
    "daoyi-module-infra",
    "daoyi-module-member",
    "daoyi-module-bpm",
    "daoyi-module-pay",
    "daoyi-module-report",
    "daoyi-module-mp",
    "daoyi-module-mall",
    "daoyi-module-crm",
    "daoyi-module-erp",
    "daoyi-module-ai",
    "daoyi-module-iot",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
salvo = "0.85.0"
redis = "1.0.0-rc.4"
nacos-sdk = "0.5.3"
sea-orm = { version = "2.0.0-rc.19", default-features = false, features = ["runtime-tokio-rustls", "macros"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
