[package]
name = "daoyi-framework"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
redis.workspace = true
nacos-sdk.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
daoyi-dependencies = { path = "../daoyi-dependencies" }
