[package]
name = "daoyi-module-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license-file.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
anyhow.workspace = true
daoyi-cloud-common.workspace = true
daoyi-entity-demo.workspace = true