[package]
name = "daoyi-module-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Demo business API module for daoyi-cloud-rs (can be deployed independently)"
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
salvo.workspace = true
salvo-oapi.workspace = true
tokio.workspace = true
anyhow.workspace = true
daoyi-cloud-common.workspace = true
daoyi-entity-demo.workspace = true
tracing.workspace = true
