[package]
name = "daoyi-gateway"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "daoyi-gateway"
path = "src/main.rs"

[dependencies]
daoyi-framework = { path = "../daoyi-framework" }
figment.workspace = true
salvo.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
