[package]
name = "daoyi-cloud-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license-file.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
config.workspace = true
serde.workspace = true
sea-orm.workspace = true
tracing.workspace = true
thiserror.workspace = true
axum.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tower-http.workspace = true
xid.workspace = true
bytesize.workspace = true
validator.workspace = true
axum-valid.workspace = true
regex.workspace = true
idgenerator.workspace = true
bcrypt.workspace = true
jsonwebtoken.workspace = true
wax.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true