[package]
name = "daoyi-cloud-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Common infrastructure library for daoyi-cloud-rs: JWT auth, error handling, pagination, validation, OpenAPI docs, and more"
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
config.workspace = true
serde.workspace = true
sea-orm.workspace = true
tracing.workspace = true
thiserror.workspace = true
axum.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tower-http.workspace = true
xid.workspace = true
bytesize.workspace = true
validator.workspace = true
axum-valid.workspace = true
regex.workspace = true
idgenerator.workspace = true
bcrypt.workspace = true
jsonwebtoken.workspace = true
wax.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-scalar.workspace = true