[package]
name = "daoyi-entity-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license-file.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
sea-orm.workspace = true
serde.workspace = true
daoyi-cloud-common.workspace = true
validator.workspace = true