[package]
name = "daoyi-entity-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Demo business entity, model and service layer for daoyi-cloud-rs (SeaORM + PostgreSQL)"
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sea-orm.workspace = true
serde.workspace = true
daoyi-cloud-common.workspace = true
validator.workspace = true
tracing.workspace = true
utoipa.workspace = true