[package]
name = "daoyi-module-ai-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "daoyi-module-ai-server"
path = "src/main.rs"

[dependencies]
daoyi-framework = { path = "../../daoyi-framework" }
daoyi-gateway = { path = "../../daoyi-gateway" }
daoyi-module-ai-api = { path = "../daoyi-module-ai-api" }
salvo.workspace = true
tokio.workspace = true
tracing.workspace = true
