[package]
name = "daoyi-module-bpm-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "daoyi-module-bpm-server"
path = "src/main.rs"

[dependencies]
daoyi-framework = { path = "../../daoyi-framework" }
daoyi-gateway = { path = "../../daoyi-gateway" }
daoyi-module-bpm-api = { path = "../daoyi-module-bpm-api" }
salvo.workspace = true
tokio.workspace = true
tracing.workspace = true
