[package]
name = "daoyi-module-crm-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "daoyi-module-crm-server"
path = "src/main.rs"

[dependencies]
daoyi-framework = { path = "../../daoyi-framework" }
daoyi-gateway = { path = "../../daoyi-gateway" }
daoyi-module-crm-api = { path = "../daoyi-module-crm-api" }
salvo.workspace = true
tokio.workspace = true
tracing.workspace = true
