[package]
name = "daoyi-module-erp-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "daoyi-module-erp-server"
path = "src/main.rs"

[dependencies]
daoyi-framework = { path = "../../daoyi-framework" }
daoyi-gateway = { path = "../../daoyi-gateway" }
daoyi-module-erp-api = { path = "../daoyi-module-erp-api" }
salvo.workspace = true
tokio.workspace = true
tracing.workspace = true
