[package]
name = "daoyi-module-infra-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "daoyi-module-infra-server"
path = "src/main.rs"

[dependencies]
daoyi-framework = { path = "../../daoyi-framework" }
daoyi-gateway = { path = "../../daoyi-gateway" }
daoyi-module-infra-api = { path = "../daoyi-module-infra-api" }
salvo.workspace = true
tokio.workspace = true
tracing.workspace = true
