[package]
name = "daoyi-module-iot-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "daoyi-module-iot-server"
path = "src/main.rs"

[dependencies]
daoyi-framework = { path = "../../daoyi-framework" }
daoyi-gateway = { path = "../../daoyi-gateway" }
daoyi-module-iot-api = { path = "../daoyi-module-iot-api" }
salvo.workspace = true
tokio.workspace = true
tracing.workspace = true
