[package]
name = "daoyi-module-product-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "daoyi-module-product-server"
path = "src/main.rs"

[dependencies]
daoyi-framework = { path = "../../daoyi-framework" }
daoyi-gateway = { path = "../../daoyi-gateway" }
daoyi-module-product-api = { path = "../daoyi-module-product-api" }
salvo.workspace = true
tokio.workspace = true
tracing.workspace = true
