[package]
name = "daoyi-module-trade-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "daoyi-module-trade-server"
path = "src/main.rs"

[dependencies]
daoyi-framework = { path = "../../daoyi-framework" }
daoyi-gateway = { path = "../../daoyi-gateway" }
daoyi-module-trade-api = { path = "../daoyi-module-trade-api" }
salvo.workspace = true
tokio.workspace = true
tracing.workspace = true
