[package]
name = "daoyi-module-member-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "daoyi-module-member-server"
path = "src/main.rs"

[dependencies]
daoyi-framework = { path = "../../daoyi-framework" }
daoyi-gateway = { path = "../../daoyi-gateway" }
daoyi-module-member-api = { path = "../daoyi-module-member-api" }
salvo.workspace = true
tokio.workspace = true
tracing.workspace = true
