[package]
name = "daoyi-module-pay-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "daoyi-module-pay-server"
path = "src/main.rs"

[dependencies]
daoyi-framework = { path = "../../daoyi-framework" }
daoyi-gateway = { path = "../../daoyi-gateway" }
daoyi-module-pay-api = { path = "../daoyi-module-pay-api" }
salvo.workspace = true
tokio.workspace = true
tracing.workspace = true
