[package]
name = "daoyi-module-system-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "daoyi-module-system-server"
path = "src/main.rs"

[dependencies]
daoyi-framework = { path = "../../daoyi-framework" }
daoyi-gateway = { path = "../../daoyi-gateway" }
daoyi-module-system-api = { path = "../daoyi-module-system-api" }
salvo.workspace = true
tokio.workspace = true
tracing.workspace = true
